fix layout problems for bubble viz

--- a/css/style.css
+++ b/css/style.css
@@ -52,8 +52,15 @@ p {
 .bubble-container {
   margin: auto;
   max-width: 100vw;
-  max-height: 90vh;  width: 80vw;
+  max-height: 90vh;
+  width: 80vw;
   height: 800px;
+}
+
+#bubbleVis {
+  width: 80vw;
+  height: 100vh;
+  margin-left: -9.5vw;
 }
 
 /** Color Legend **/ 
@@ -123,12 +130,6 @@ p {
 }
 
 /** Bubble Vis **/
-#bubbleVis {
-  width: 80vw;
-  height: 800px;
-  margin-left: -9.5vw;
-}
-
 .bubble:hover {
   cursor: pointer;
 }
